--- a/src/aura/IFollowList/IFollowList.cmp
+++ b/src/aura/IFollowList/IFollowList.cmp
@@ -1,10 +1,10 @@
-<aura:component access="public" controller="IFollowObject" implements="force:appHostable,flexipage:availableForAllPageTypes" >
+<aura:component controller="IFollowObject" implements="force:appHostable,flexipage:availableForAllPageTypes,forceCommunity:availableForAllPageTypes" access="global">
     <!-- Attributes for Records Followed List     -->
     <aura:attribute name="lstFlwRecords" type="IFollowObject"/>
     <aura:attribute name="lstObjects" type="String[]" default="Filter By"/>
-    <aura:attribute name="limitRows" type="Integer" default="8"/>
+    <aura:attribute name="limitRows" type="Integer" default="8" access="global"/>
     <aura:attribute name="validRange" type="Boolean" default="true"/>
-    <aura:attribute name="componentName" type="String" default="IFollow"/>
+    <aura:attribute name="componentName" type="String" default="IFollow" access="global"/>
     <aura:attribute name="selectedObj" type="String" default="Most Recent"/>
     <ltng:require styles="/resource/roreblciflw3__btstrp12" />
     <!-- Initialization event handler registration -->
